Provide default Client on ElasticsearchCluster base class
The non-generic ElasticsearchCluster now ships a virtual Client property
with debug mode and per-test output wiring out of the box. Clusters that
extend the non-generic base inherit it automatically — override to
customize. This makes the minimal cluster definition a true one-liner.

Transitive dependencies (Elastic.Clients.Elasticsearch, Ephemeral) are
removed from the example csproj files since they flow through the TUnit
package. README updated to reflect the simplified getting-started.

--- a/src/Elastic.Elasticsearch.TUnit/Elastic.Elasticsearch.TUnit.csproj
+++ b/src/Elastic.Elasticsearch.TUnit/Elastic.Elasticsearch.TUnit.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="TUnit.Core" Version="1.15.0" />
+    <PackageReference Include="Elastic.Clients.Elasticsearch" Version="9.2.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Elastic.Elasticsearch.Ephemeral\Elastic.Elasticsearch.Ephemeral.csproj" />
