Split `Elastic.Elasticsearch.TUnit` into `Elastic.TUnit.Elasticsearch.Core` + `Elastic.TUnit.Elasticsearch`
Separate the core TUnit cluster integration (lifecycle, hooks, skip attributes,
diagnostics) from the `Elastic.Clients.Elasticsearch` convenience layer so users
who don't need the official client can depend on the Core package alone.

- `Elastic.TUnit.Elasticsearch.Core`: barebones package, no ES client dependency
- `Elastic.TUnit.Elasticsearch`: recommended package with default Client and
  `.WireTUnitOutput()` extension

--- a/examples/Elastic.TUnit.ExampleComplex/Elastic.TUnit.ExampleComplex.csproj
+++ b/examples/Elastic.TUnit.ExampleComplex/Elastic.TUnit.ExampleComplex.csproj
@@ -7,6 +7,6 @@
     <PackageReference Include="TUnit" Version="1.15.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Elastic.Elasticsearch.TUnit\Elastic.Elasticsearch.TUnit.csproj" />
+    <ProjectReference Include="..\..\src\Elastic.TUnit.Elasticsearch\Elastic.TUnit.Elasticsearch.csproj" />
   </ItemGroup>
 </Project>
